unpackaged/main/default/objects/Site_Suitability_Checklist_Setting__mdt/Site_Suitability_Checklist_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Created as part of HRP-8137</description>
    <label>Site Suitability Checklist Setting</label>
    <pluralLabel>Site Suitability Checklist Settings</pluralLabel>
</CustomObject>