unpackaged/main/default/objects/Site_Suitability_Checklist_Setting__mdt/fields/UI_Text__c.field-meta.xml
<CustomField>
    <fullName>UI_Text__c</fullName>
    <label>UI Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>