unpackaged/main/default/objects/Site_Suitability_Checklist_Setting__mdt/listViews/All_New.listView-meta.xml
<ListView>
    <fullName>All_New</fullName>
    <columns>MasterLabel</columns>
    <columns>Category__c</columns>
    <columns>UI_Text__c</columns>
    <columns>IsCheckbox__c</columns>
    <filterScope>Everything</filterScope>
    <label>All New</label>
    <language>en_US</language>
</ListView>